--- a/client/hometeach.ejs
+++ b/client/hometeach.ejs
@@ -99,7 +99,7 @@
             </div>
             <div class="sixteen wide column">
                 <table class="ui selectable inverted brown table" id="tclass">
-                    <thead>
+                    <thead align="center"> 
                         <tr>
                             <th>Class ID</th>
                             <th>Class Name</th>
@@ -107,7 +107,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody id="showclass">
+                    <tbody id="showclass" align="center">
                         <form action="detail" class="ui form" method="POST" novalidate="novalidate" align="center">
                             <%- table -%>
                         </form>
