--- a/client/summaryclass.ejs
+++ b/client/summaryclass.ejs
@@ -212,6 +212,9 @@
                 <div class="fields">
                     <input type="text" name="lastname" id="lastname">
                 </div>
+                <div class="fields">
+                    <input type="hidden" name="a" id="a" value="<%- class_id -%>">
+                </div>
                 <button class="ui button" type="submit">Add Student</button>
             </form>
         </div>
