add dashboard std

--- a/client/stddetail.ejs
+++ b/client/stddetail.ejs
@@ -65,6 +65,11 @@
                 </h3>
             </div>
             <div class="sixteen wide column">
+                <div align="right">
+                    <form method="POST" action="dashboardSTD">
+                        <button class="ui inverted green button" type="submit" formMethod="POST" formAction="dashboardSTD" value="<%- class_id -%>, <%- class_name -%>,<%- stdID -%>" id="dashboard" name="dashboard">Dashboard</button>
+                    </form>
+                </div>
                 <table class="ui selectable inverted brown table" id="tclass">
                     <thead class="center aligned">
                         <tr>
