--- a/client/dashboard.ejs
+++ b/client/dashboard.ejs
@@ -33,31 +33,49 @@
     <script src='https://cdn.plot.ly/plotly-latest.min.js'></script>
     <script>
         window.onload = function() {
-        var chart = new CanvasJS.Chart("chartContainer", {
+            let valueDate = (document.getElementById("date").value).split(',')
+            let valueCount = (document.getElementById("count").value).split(',')
+            let valueBar = []
+            valueDate.forEach((element, i) => {
+                valueBar.push({
+                    y: parseInt(valueCount[i]),
+                    label: valueDate[i]
+                })
+            });
+            console.log(valueBar)
+            var chart = new CanvasJS.Chart("chartContainer", {
             animationEnabled: true,
-            title: {
-                text: "Desktop Search Engine Market Share - 2016"
+            theme: "light2", // "light1", "light2", "dark1", "dark2"
+            title:{
+                text: "Latest Day"
             },
-            data: [{
-                type: "pie",
-                startAngle: 240,
-                yValueFormatString: "##0.00\"%\"",
-                indexLabel: "{label} {y}",
-                dataPoints: [
-                    {y: 79.45, label: "Google"},
-                    {y: 7.31, label: "Bing"},
-                    {y: 7.06, label: "Baidu"},
-                    {y: 4.91, label: "Yahoo"},
-                    {y: 1.26, label: "Others"}
-                ]
+            axisY: {
+                title: "Number of students",
+                labelFontSize: 20,
+				labelFontColor: "#ffffff"
+            },
+            axisX: {
+                labelFontSize: 20,
+				labelFontColor: "#ffffff"
+            },
+            data: [{        
+                type: "column",  
+                showInLegend: true, 
+                legendMarkerColor: "grey",
+                legendText: "Class Date",
+                dataPoints: valueBar
+                
             }],
-            backgroundColor: "#000000"
+                backgroundColor: "#000000"
         });
         chart.render();
+
         }
-        </script>
+    </script>
 </head>
 <body>
+    <input type="hidden" id="date" value="<%- arrBarName -%>">
+    <input type="hidden" id="count" value="<%- arrBarValue -%>">
     <div class="ui container">
         <div class="ui grid">
             <div class="eight wide column">
@@ -88,8 +106,8 @@
                     <table>
                         <tr>
                             <td>
-                                <form method="POST" action="summary">
-                                    <button class="ui inverted green button" type="submit"value="<%- class_id -%>,<%- class_name -%>" id="classid" name="classid">Student Lists</button>
+                                <form method="get" action="summary">
+                                    <button class="ui inverted green button" type="submit">Student Lists</button>
                                 </form>
                             </td>
                         </tr>
@@ -101,8 +119,9 @@
                         <td>
                             <div class="ui equal width center aligned padded grid">
                                 <div class="row">
-                                    <div class="olive column" style=" width: 290px; height: 150px; border-radius: 8px; left: 55px;">
-                                      Olive
+                                    <div class="column" style=" width: 290px; height: 150px; border-radius: 8px; left: 55px;background-color: rgb(49, 168, 49);color: white;">
+                                        <h1>All Student</h1>
+                                        <h1><%- countAll %></h1>
                                     </div>
                                   </div>
                             </div>
@@ -110,8 +129,9 @@
                         <td>
                             <div class="ui equal width center aligned padded grid">
                                 <div class="row">
-                                    <div class="olive column" style=" width: 290px; height: 150px; border-radius: 8px; left: 120px;">
-                                      Olive
+                                    <div class="column" style=" width: 290px; height: 150px; border-radius: 8px; left: 120px;background-color: rgb(211, 211, 36);color: white;">
+                                        <h1>Active</h1>
+                                        <h1><%- countNormal %></h1>
                                     </div>
                                   </div>
                             </div>
@@ -119,8 +139,9 @@
                         <td>
                             <div class="ui equal width center aligned padded grid">
                                 <div class="row">
-                                    <div class="olive column" style=" width: 290px; height: 150px; border-radius: 8px; left: 185px;">
-                                      Olive
+                                    <div class="column" style=" width: 290px; height: 150px; border-radius: 8px; left: 185px;background-color: rgb(248, 90, 90);color: white;">
+                                        <h1>Withdraw</h1>
+                                        <h1><%- countWithdraw %></h1>
                                     </div>
                                   </div>
                             </div>
@@ -130,7 +151,9 @@
             </div>
         </div>
         <br>
-        <div align="center" id="chartContainer" style="height: 300px; width: 70%;"></div>
+        <div align="center">
+            <div id="chartContainer" style="height: 300px; width: 90%;"></div>
+        </div>
     </div>
 </body>
 </html>
