--- a/client/hometeach.ejs
+++ b/client/hometeach.ejs
@@ -121,7 +121,7 @@
 
 
 
-    <div class="ui large modal" id="addclass-modal">
+    <div class="ui tiny modal" id="addclass-modal">
         <i class="close icon"></i>
         <div class="header">
             <i class="edit outline icon"></i> Register
