--- a/client/summaryclass.ejs
+++ b/client/summaryclass.ejs
@@ -54,8 +54,8 @@
                 let valueSplit = element.split(",")
                 a.push(valueSplit)
             });
-            console.log(a)
-            var csv = 'No,ID,Name,Status\n';
+            // console.log(a)
+            var csv = 'No,ID,Name,Status,In Class,Out Class\n';
             a.forEach(function(row) {
                     csv += row.join(',');
                     csv += "\n";
@@ -105,7 +105,7 @@
                 <input type="hidden" id="class_NAME" value="<%- class_name -%>">
                 <h3 class="ui horizontal divider header" style="color: white;">
                     <i class="bar chart icon"></i>
-                    Studenr Lists
+                    Student Lists
                 </h3>
             </div>
             <div class="sixteen wide column">
